# catalog_django_app

./: .env.sample  README.md  category_fixture.json  groups.json  product_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0003_alter_contacts_phone_number.py  0004_alter_product_options_product_is_published.py  0005_product_owner.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  contacts_form.html  contacts_list.html  home.html  home_page.html  menu.html  product_by_category.html  product_delete_form.html  product_detail.html  product_form.html  product_info.html
catalog/templates/catalog/includes/: header.html  menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
users/templates/registration/: login.html
users/templates/users/: register.html
